@@ -34,7 +34,6 @@ from objc._category import *
 from objc._bridges import *
 from objc._compat import *
 from objc._pythonify import *
-from objc._functions import *
 from objc._locking import *
 from objc._context import *
 from objc._properties import *
